<resources>
    <string name="app_name">TestPhone</string>
    <string name="updateMsgTxt">The update is ready to install. Click The Update Button.</string>
    <string name="installMsgTxt">To work correctly, install the TPAssistant application. Click Install.</string>
    <string name="updateAssistantMsgTxt">Update the TPAssistant application. Click Update.</string>
    <string name="unpackingMsgTxt">Unpacking install apk..</string>
    <string name="rebootMsg">You must restart your device!</string>
    <string name="updateBtnTxt">Update</string>
    <string name="installBtnTxt">Install</string>
    <string name="settings">Settings</string>
    <string name="addition_loggin_menu_item_txt">Enable additional logging</string>
    <string name="clear_db_menu_item_txt">Clear data base</string>
    <string name="enter_password_txt">Enter password</string>
    <string name="send_to_server">Send to server</string>
    <string name="clear_db">Clear DB</string>
    <string name="check_update">Check update</string>
    <string name="send_logs">Send logs</string>
    <string name="clear_info">Clear Info</string>
    <string name="closed">Closed</string>
    <string name="attempt_to_download_a_file">Attempt to download a file</string>

    <!--Errors msg-->
    <string name="error_parsing_the_settings_file">Error parsing the settings file</string>
</resources>
