<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/main_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="visible">

        <Button
            android:id="@+id/btnSend"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/send_to_server" />

        <Button
            android:id="@+id/btnClear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/clear_db"
            android:visibility="gone" />

        <Button
            android:id="@+id/btn_send_logs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/send_logs" />

        <Button
            android:id="@+id/btn_chk_update"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/check_update" />

        <Button
            android:id="@+id/btn_clear_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/clear_info" />

        <Button
            android:id="@+id/btn_closed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/closed" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:overScrollMode="always">

            <TextView
                android:id="@+id/tvInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp" />
        </ScrollView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/password_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <EditText
            android:id="@+id/editTextTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/enter_password_txt"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/check_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="16dp"
            android:text="Enter" />
    </LinearLayout>
</RelativeLayout>